# car-best-deal

./: .env.example  .env.postgres.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  backend-readme.md  canadian-used-car-dealer-workflow.md  docker-compose.yml  implementation-plan-ai-output-audit-trail.md  implementation-plan-alembic-postgres-readiness.md  implementation-plan-autotrader-adapter.md  implementation-plan-candidate-enrichment-image-gate.md  implementation-plan-candidate-workflow-state.md  implementation-plan-comparable-editing.md  implementation-plan-dealer-corrections-overrides.md  implementation-plan-dealer-settings-management.md  implementation-plan-decision-report.md  implementation-plan-discovery-dashboard.md  implementation-plan-document-upload-fallback.md  implementation-plan-gemini-image-risk.md  implementation-plan-in-app-email-alerts.md  implementation-plan-kijiji-batch-ranking.md  implementation-plan-lien-title-evidence-workflow.md  implementation-plan-live-kijiji-smoke.md  implementation-plan-milestone-1.md  implementation-plan-milestone-2-5.md  implementation-plan-milestone-2.md  implementation-plan-natural-language-search-interpretation.md  implementation-plan-opportunity-promotion.md  implementation-plan-opportunity-stage-workflow.md  implementation-plan-persisted-analysis-profile-entities.md  implementation-plan-pilot-feedback-loop.md  implementation-plan-pilot-mode-live-url-diagnostics.md  implementation-plan-postgres-api-runtime-verification.md  implementation-plan-postgres-local-runtime.md  (+21 more)
alembic/: env.py
app/: __init__.py
(+105 files in other folders)
