[project]
name = "car-dealer"
version = "0.1.0"
description = "Quebec used-car opportunity finder MVP backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.5.0",
  "python-multipart>=0.0.20",
  "scrapling>=0.2.0",
  "sqlalchemy>=2.0.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
